Get sign-in and admin bootstrap working with dynamic signin provider

--- a/config/services/security.yaml
+++ b/config/services/security.yaml
@@ -1,6 +1,25 @@
 services:
     ####################################################################################################################
-    # AUTHORIZATIONS
+    # authentications
+    ####################################################################################################################
+
+    auth:
+        class: 'Hal\UI\Security\Auth'
+        arguments:
+            -
+                ldap: '@auth.ldap'
+                internal: '@auth.internal'
+
+    auth.internal:
+        class: 'Hal\UI\Security\UserAuthentication\InternalAuth'
+        arguments: ['@doctrine.em']
+
+    auth.ldap:
+        class: 'Hal\UI\Security\UserAuthentication\LdapAuth'
+        arguments: ['@doctrine.em']
+
+    ####################################################################################################################
+    # authorizations
     ####################################################################################################################
 
     service.authorization:
@@ -17,7 +36,7 @@ services:
         arguments: ['@doctrine.em']
 
     ####################################################################################################################
-    # CRYPTO
+    # crypto
     ####################################################################################################################
 
     encryption:
