--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -39,6 +39,15 @@ parameters:
             route: '/signout'
             stack: ['signout.page']
 
+        ####################################################################################################################
+        # HAL BOOTSTRAP
+        ####################################################################################################################
+
+        hal_bootstrap:
+            method: ['GET', 'POST']
+            route: '/hal-bootstrap'
+            stack: ['hal_bootstrap.page']
+
         ################################################################################################################
         # HELP ROUTES
         ################################################################################################################
